objects/Application_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Application Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Value__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AS - {0000000}</displayFormat>
        <label>Application Setting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>